kubernetes/applications/syncthing/syncthing-svc-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-dashboard
  namespace: syncthing
spec:
  type: ClusterIP
  ports:
  - name: syncthing-dashboard
    protocol: TCP
    port: 8384
    targetPort: 8384
  selector:
    app: syncthing
