kubernetes/applications/syncthing/syncthing-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
    external-dns.alpha.kubernetes.io/target: 188.155.74.203
  name: synchting-ingress
  namespace: syncthing
spec:
  ingressClassName: nginx
  rules:
  - host: syncthing.lilalala.com
    http:
      paths:
      - backend:
          service:
            name: syncthing-dashboard
            port:
              number: 8384
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - syncthing.lilalala.com
    secretName: syncthing-tls
